# weather_app

./: .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  main.py
src/home/: router.py
src/info/: router.py
src/static/script/: disableButtonWithEmptyInput.js
src/static/styles/: home.css  no_weather.css  select_city.css  weather.css  weather_info.css
src/templates/: base.html  base_weather_page.html  choice_city.html  home.html  weather.html  weather_result.html
src/weather/: config.py  constants.py  exceptions.py  router.py  service.py  utils.py
tests/: pytest.ini
tests/e2e/: conftest.py
tests/e2e/common/: URLs.py  exceptions.py  image_by_link.py  window_sizes.py
tests/e2e/nav_test/: test_nav_no_burger.py  test_nav_with_burger.py
tests/e2e/page_objects/: home_page.py  weather_page.py
tests/e2e/weather_page/: test_weather_page.py  utils.py
tests/unit/: pytest.ini  test_add_seconds_shift_to_datetime.py  test_get_city_locations_with_same_name.py  test_get_weather.py  test_get_weather_by_city.py  test_get_weather_icon.py  test_is_night.py
tests/unit/common/: add_seconds_shift_to_datetime_test_data.py  get_city_locations_with_same_name_test_data.py  get_weather_by_city_test_data.py  get_weather_test_data.py  test_data.py  test_data_get_weather_icon.py  test_data_is_hight.py
weather_app/: config.py  main.py
weather_app/home/: router.py
weather_app/static/script/: disableButtonWithEmptyInput.js
weather_app/templates/: base_weather_page.html  error.html  no_weather.html  weather_server_error.html
weather_app/weather/: exceptions.py  router.py  service.py  utils.py
(+8 files in other folders)
