[tool.poetry]
name = "weather app"
version = "0.1.0"
description = "This app use API to show weather at concrete city"
authors = ["sariya <dayzwaitik123@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pytest = "^8.1.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ['E501', 'E712']