[tool.poetry]
name = "weather app"
version = "0.1.0"
description = "This app use API to show weather at concrete city"
authors = ["sariya <dayzwaitik123@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pytest = "^8.1.1"
pydantic-settings = "^2.2.1"
pytest-xdist = "^3.5.0"
selenium = "^4.19.0"
pageo = "^0.3.1"
requests = "^2.31.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ['E501', 'E712']